--- a/style.css
+++ b/style.css
@@ -14,16 +14,31 @@ h2{
     color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
+h4{
+    color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin: 3px;
+    padding: 3px;
+}
 p{
     display: flex;
     color: white;
     font-family: 'Times New Roman', Times, serif;
+    margin: 4px;
+    padding: 1px;
 }
 nav ul li{
     list-style: none; 
     color: white;   
     display: inline-block;
     margin: 5px;
+}
+div ul li{
+    color: white;
+    font-size: large;
+    display: flex;
+    flex-direction: column;
+    margin: 3px;
 }
 ul{
     list-style: none;
@@ -39,6 +54,7 @@ body nav ul li a{
     display: inline-block;
     list-style: none;
 }
+
 .menu{
     display: flex;
     justify-content: space-between;
@@ -83,6 +99,8 @@ body nav ul li a{
 }
 .redes{
     flex-direction: column;
+}
+.detailing-titulo{
 }
 @media screen and (max-width: 900px){
 
