--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
 h1 {
   color: white;
   font-family: Georgia, "Times New Roman", Times, serif;
+  text-align: center  ;
 }
 
 h2 {
@@ -81,6 +82,12 @@ body nav ul li a {
   opacity: 100%;
   transform: scale(1.2);
 }
+.ejemplosdetailing{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 300px;
+}   
 
 .novedad {
   display: grid;
